stop wrapping cards when it has buttons #470

--- a/blocks/v2-content-card/v2-content-card.css
+++ b/blocks/v2-content-card/v2-content-card.css
@@ -139,6 +139,10 @@
   background-color: var(--c-grey-200);
 }
 
+.v2-content-card--with-button {
+  flex-wrap: nowrap;
+}
+
 .v2-content-card--with-button .v2-content-card__content {
   gap: 16px;
   justify-content: space-between;
